<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SavedItemEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="708dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_edit_savedShoppingItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/editText_edit_savedShoppingItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/id_cancel_edit_shopping_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/id_save_edit_shopping_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>